{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 95,
  "lineage": "03f5df9d-7e80-0104-304c-410cb1f2042d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b5f95c671614595",
            "arn": "arn:aws:ec2:us-east-1:926909118267:elastic-ip/eipalloc-08b5f95c671614595",
            "domain": "vpc",
            "id": "eipalloc-08b5f95c671614595",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-210-119-112.compute-1.amazonaws.com",
            "public_ip": "18.210.119.112",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "public-1-eip"
            },
            "tags_all": {
              "Name": "public-1-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "eipalloc-08b5f95c671614595",
            "region": "us-east-1"
          }
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d10a08990b5e2e3",
            "arn": "arn:aws:ec2:us-east-1:926909118267:elastic-ip/eipalloc-03d10a08990b5e2e3",
            "domain": "vpc",
            "id": "eipalloc-03d10a08990b5e2e3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-57-98-220.compute-1.amazonaws.com",
            "public_ip": "100.57.98.220",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "public-2-eip"
            },
            "tags_all": {
              "Name": "public-2-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "eipalloc-03d10a08990b5e2e3",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-048a454009b730c5c",
            "arn": "arn:aws:ec2:us-east-1:926909118267:instance/i-0fb5e025a7bd1a01c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb5e025a7bd1a01c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-044695bbc750d22d9"
              }
            ],
            "primary_network_interface_id": "eni-044695bbc750d22d9",
            "private_dns": "ip-10-0-11-174.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.174",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06f6247655b299756",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c62b24f28bc737e",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6f70d31717643a4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "i-0fb5e025a7bd1a01c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-048a454009b730c5c",
            "arn": "arn:aws:ec2:us-east-1:926909118267:instance/i-049a26792a9278a57",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049a26792a9278a57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-001515bacfa8a2c3b"
              }
            ],
            "primary_network_interface_id": "eni-001515bacfa8a2c3b",
            "private_dns": "ip-10-0-12-176.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.176",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06c81a1ee46050508",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02857b9448f576253",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6f70d31717643a4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "i-049a26792a9278a57",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926909118267:internet-gateway/igw-0d740f410cd88901f",
            "id": "igw-0d740f410cd88901f",
            "owner_id": "926909118267",
            "region": "us-east-1",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0afa794989b367283"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "igw-0d740f410cd88901f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:926909118267:loadbalancer/app/main-alb/c97389027bd50227",
            "arn_suffix": "app/main-alb/c97389027bd50227",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-alb-1901303808.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:926909118267:loadbalancer/app/main-alb/c97389027bd50227",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-08bb9373251a5b450"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-084aaa6a5dab420eb"
              },
              {
                "subnet_id": "subnet-0e18aa85b83df397d"
              }
            ],
            "subnets": [
              "subnet-084aaa6a5dab420eb",
              "subnet-0e18aa85b83df397d"
            ],
            "tags": {
              "Name": "main-alb"
            },
            "tags_all": {
              "Name": "main-alb"
            },
            "vpc_id": "vpc-0afa794989b367283",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:926909118267:loadbalancer/app/main-alb/c97389027bd50227"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.main",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:926909118267:listener/app/main-alb/c97389027bd50227/5407f9568c9ce5c8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:926909118267:targetgroup/app-target-group/18c3d24d2c5c60e5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:926909118267:listener/app/main-alb/c97389027bd50227/5407f9568c9ce5c8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:926909118267:loadbalancer/app/main-alb/c97389027bd50227",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:926909118267:listener/app/main-alb/c97389027bd50227/5407f9568c9ce5c8"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.main",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:926909118267:targetgroup/app-target-group/18c3d24d2c5c60e5",
            "arn_suffix": "targetgroup/app-target-group/18c3d24d2c5c60e5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:926909118267:targetgroup/app-target-group/18c3d24d2c5c60e5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app-target-group"
            },
            "tags_all": {
              "Name": "app-target-group"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0afa794989b367283"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:926909118267:targetgroup/app-target-group/18c3d24d2c5c60e5"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:926909118267:targetgroup/app-target-group/18c3d24d2c5c60e5,i-0fb5e025a7bd1a01c,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:926909118267:targetgroup/app-target-group/18c3d24d2c5c60e5",
            "target_id": "i-0fb5e025a7bd1a01c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:926909118267:targetgroup/app-target-group/18c3d24d2c5c60e5",
            "target_id": "i-0fb5e025a7bd1a01c"
          },
          "dependencies": [
            "aws_instance.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:926909118267:targetgroup/app-target-group/18c3d24d2c5c60e5,i-049a26792a9278a57,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:926909118267:targetgroup/app-target-group/18c3d24d2c5c60e5",
            "target_id": "i-049a26792a9278a57"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:926909118267:targetgroup/app-target-group/18c3d24d2c5c60e5",
            "target_id": "i-049a26792a9278a57"
          },
          "dependencies": [
            "aws_instance.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_subnet.private",
            "aws_vpc.main_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b5f95c671614595",
            "association_id": "eipassoc-095c720139758bff7",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0bd0fcdaefa6e8894",
            "network_interface_id": "eni-00dd38b51f7cb364b",
            "private_ip": "10.0.1.17",
            "public_ip": "18.210.119.112",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-084aaa6a5dab420eb",
            "tags": {
              "Name": "public-1-nat"
            },
            "tags_all": {
              "Name": "public-1-nat"
            },
            "vpc_id": "vpc-0afa794989b367283"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "nat-0bd0fcdaefa6e8894",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.main",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d10a08990b5e2e3",
            "association_id": "eipassoc-0fdfcdc2698d980d9",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0edb9241c1855adb6",
            "network_interface_id": "eni-0da2f901f24c79d55",
            "private_ip": "10.0.2.225",
            "public_ip": "100.57.98.220",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e18aa85b83df397d",
            "tags": {
              "Name": "public-2-nat"
            },
            "tags_all": {
              "Name": "public-2-nat"
            },
            "vpc_id": "vpc-0afa794989b367283"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "nat-0edb9241c1855adb6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.main",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07c08f07e350cdcca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bd0fcdaefa6e8894",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-07c08f07e350cdcca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-07c08f07e350cdcca"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.main",
            "aws_subnet.private",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-005872dd41f8a153f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0edb9241c1855adb6",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-005872dd41f8a153f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-005872dd41f8a153f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.main",
            "aws_subnet.private",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d740f410cd88901f",
            "id": "r-rtb-052775d830c19d64a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-052775d830c19d64a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-052775d830c19d64a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926909118267:route-table/rtb-052775d830c19d64a",
            "id": "rtb-052775d830c19d64a",
            "owner_id": "926909118267",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afa794989b367283"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "rtb-052775d830c19d64a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926909118267:route-table/rtb-07c08f07e350cdcca",
            "id": "rtb-07c08f07e350cdcca",
            "owner_id": "926909118267",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "private-1-rt"
            },
            "tags_all": {
              "Name": "private-1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afa794989b367283"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "rtb-07c08f07e350cdcca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926909118267:route-table/rtb-005872dd41f8a153f",
            "id": "rtb-005872dd41f8a153f",
            "owner_id": "926909118267",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "private-2-rt"
            },
            "tags_all": {
              "Name": "private-2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afa794989b367283"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "rtb-005872dd41f8a153f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0965852de7c098e1c",
            "region": "us-east-1",
            "route_table_id": "rtb-07c08f07e350cdcca",
            "subnet_id": "subnet-09c62b24f28bc737e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "rtbassoc-0965852de7c098e1c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4b3c4e1c20353b2",
            "region": "us-east-1",
            "route_table_id": "rtb-005872dd41f8a153f",
            "subnet_id": "subnet-02857b9448f576253"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "rtbassoc-0b4b3c4e1c20353b2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f48c7d36ad9c9939",
            "region": "us-east-1",
            "route_table_id": "rtb-052775d830c19d64a",
            "subnet_id": "subnet-084aaa6a5dab420eb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "rtbassoc-0f48c7d36ad9c9939",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.example",
            "aws_subnet.main",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04605513558bb12a2",
            "region": "us-east-1",
            "route_table_id": "rtb-052775d830c19d64a",
            "subnet_id": "subnet-0e18aa85b83df397d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "rtbassoc-04605513558bb12a2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.example",
            "aws_subnet.main",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926909118267:security-group/sg-08bb9373251a5b450",
            "description": "Allow HTTP and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bb9373251a5b450",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "926909118267",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afa794989b367283"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "sg-08bb9373251a5b450",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926909118267:security-group/sg-0b6f70d31717643a4",
            "description": "Application Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6f70d31717643a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "167.103.118.83/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08bb9373251a5b450"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "926909118267",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afa794989b367283"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "sg-0b6f70d31717643a4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926909118267:subnet/subnet-084aaa6a5dab420eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084aaa6a5dab420eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "926909118267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-0afa794989b367283"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "subnet-084aaa6a5dab420eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926909118267:subnet/subnet-0e18aa85b83df397d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e18aa85b83df397d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "926909118267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-0afa794989b367283"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "subnet-0e18aa85b83df397d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926909118267:subnet/subnet-09c62b24f28bc737e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c62b24f28bc737e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "926909118267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-0afa794989b367283"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "subnet-09c62b24f28bc737e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926909118267:subnet/subnet-02857b9448f576253",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02857b9448f576253",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "926909118267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-0afa794989b367283"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "subnet-02857b9448f576253",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:926909118267:vpc/vpc-0afa794989b367283",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053d4fd64e1151cb1",
            "default_route_table_id": "rtb-0c489295855c0c128",
            "default_security_group_id": "sg-055521a44a3d40587",
            "dhcp_options_id": "dopt-0ad8dccc8732ead89",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0afa794989b367283",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c489295855c0c128",
            "owner_id": "926909118267",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "926909118267",
            "id": "vpc-0afa794989b367283",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}